全量逻辑优化5
